--- a/Miniatures.html
+++ b/Miniatures.html
@@ -222,8 +222,6 @@
                         <a href="#" class="list-group-item item">Category 3</a>
                     </div>
                 </div>
-
-
                 <div class="col-md-9">
                     <div class="row carousel-holder">
                         <div class="col-md-12">
@@ -232,91 +230,87 @@
                                     <h1 class="page-header">Miniatures</h1>
                                  </div>
                             </div>
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hover ehover5">
-                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                        <div class="overlay">
-                            <h2>Wedding</h2>
-                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                        </div>       
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hover ehover5">
-                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                        <div class="overlay">
-                            <h2>Customizable</h2>
-                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                        </div>         
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hover ehover5">
-                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                        <div class="overlay">
-                            <h2>Jewellery</h2>
-                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                        </div>         
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hover ehover5">
-                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                        <div class="overlay">
-                            <h2>Accessories</h2>
-                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                        </div>         
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hover ehover5">
-                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                        <div class="overlay">
-                            <h2>Games</h2>
-                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                        </div>         
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hover ehover5">
-                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                        <div class="overlay">
-                            <h2>Art</h2>
-                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                        </div>         
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hover ehover5">
-                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                        <div class="overlay">
-                            <h2>Miniatures</h2>
-                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                        </div>         
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
+                            <section class="no-padding" id="portfolio">
+                                <div class="container-fluid">
+                                    <div class="row no-gutter popup-gallery">
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                            <div class="hover ehover5">
+                                                <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                                                <div class="overlay">
+                                                    <h2>Wedding</h2>
+                                                    <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                                                </div>       
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                            <div class="hover ehover5">
+                                                <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                                                <div class="overlay">
+                                                    <h2>Customizable</h2>
+                                                    <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                                                </div>         
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
+                            <section class="no-padding" id="portfolio">
+                                <div class="container-fluid">
+                                    <div class="row no-gutter popup-gallery">
+                                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                                            <div class="hover ehover5">
+                                                <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                                                <div class="overlay">
+                                                    <h2>Jewellery</h2>
+                                                    <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                                                </div>         
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                                            <div class="hover ehover5">
+                                                <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                                                <div class="overlay">
+                                                    <h2>Accessories</h2>
+                                                    <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                                                </div>         
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                                            <div class="hover ehover5">
+                                                <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                                                <div class="overlay">
+                                                    <h2>Games</h2>
+                                                    <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                                                </div>         
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
+                            <section class="no-padding" id="portfolio">
+                                <div class="container-fluid">
+                                    <div class="row no-gutter popup-gallery">
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                            <div class="hover ehover5">
+                                                <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                                                <div class="overlay">
+                                                    <h2>Art</h2>
+                                                    <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                                                </div>         
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                            <div class="hover ehover5">
+                                                <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                                                <div class="overlay">
+                                                    <h2>Miniatures</h2>
+                                                    <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                                                </div>         
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
                         </div>
                     </div>
                     <br><br><br><br>
@@ -359,7 +353,6 @@
                         </div>
                     </div>
                     <br>
-
                     <div class="row">
                         <div class="col-md-3 portfolio-item">
                             <a href="#">
@@ -398,7 +391,6 @@
                             <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
                     </div>
-
                     <br>
                     <div class="row">
                         <div class="col-md-3 portfolio-item">
@@ -442,94 +434,91 @@
                         <a href="#" class="btn btn-dark">View More Items</a>
                     </div>
 
-    <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+                    <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
                 </div>
             </div>
         </div>
-    <br><br>
-    <div class="intro-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <a href="" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
-                </div>
-                <div class="col-lg-6">
-                    <a href="" style="color:white; text-decoration:none;"><h2>SHARE YOUR STORY</h2></a>
-                </div>
+        <br><br>
+        <div class="intro-header">
+            <div class="col-lg-6 img">
+                <br><br><br><br>
+                <a href="" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
+                <br><br><br><br>
             </div>
-        </div>
+            <div class="col-lg-6 img">
+                <br><br><br><br>
+                <a href="" style="color:white; text-decoration:none;"><h2>SHARE YOUR STORY</h2></a>
+                <br><br><br><br>
+            </div>
+            <div class="clearfix"></div>
         <!-- /.container -->
-    </div>
-    <!-- /.banner -->
+        </div>
+        <!-- /.banner -->
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; AAKIST 2016</span>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
-                        </li>
-                    </ul>
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <span class="copyright">Copyright &copy; AAKIST 2016</span>
+                    </div>
+                    <div class="col-md-4">
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <ul class="list-inline quicklinks">
+                            <li><a href="#">Privacy Policy</a>
+                            </li>
+                            <li><a href="#">Terms of Use</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
 
-    <script>
-        $(document).ready(function () {
-        $('.dropdown-toggle').dropdown();
-        });
-    </script>
-    <script type="text/javascript">
-        $('#myModal').on('shown.bs.modal', function () {
+        <script>
+            $(document).ready(function () {
+            $('.dropdown-toggle').dropdown();
+            });
+        </script>
+        <script type="text/javascript">
+            $('#myModal').on('shown.bs.modal', function () {
             $('#myInput').focus()
-        })
-    </script>
-    <script type="text/javascript">
-        $(document).ready(function() {
-          $("#slider").slider({
-              animate: true,
-              value:1,
-              min: 0,
-              max: 10000,
-              step: 20,
-              slide: function(event, ui) {
-                  update(1,ui.value); //changed
-              }
-          });
-
-
+            });
+        </script>
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $("#slider").slider({
+                    animate: true,
+                    value:1,
+                    min: 0,
+                    max: 10000,
+                    step: 20,
+                    slide: function(event, ui) {
+                    update(1,ui.value); //changed
+                }
+            });
           //Added, set initial value.
-          $("#amount").val(0);
-          $("#duration").val(0);
-          $("#amount-label").text(0);
-          $("#duration-label").text(0);
-          
-          update();
-      });
-
-      //changed. now with parameter
-      function update(slider,val) {
-        //changed. Now, directly take value from ui.value. if not set (initial, will use current value.)
-        var $amount = slider == 1?val:$("#amount").val();
-        var $duration = slider == 2?val:$("#duration").val();
-         $('#slider a').html('<label><span class="glyphicon glyphicon-chevron-left"></span> '+$amount+' <span class="glyphicon glyphicon-chevron-right"></span></label>');
-      }
-    </script>
+            $("#amount").val(0);
+            $("#duration").val(0);
+            $("#amount-label").text(0);
+            $("#duration-label").text(0);          
+            update();
+            });
+            //changed. now with parameter
+            function update(slider,val) {
+            //changed. Now, directly take value from ui.value. if not set (initial, will use current value.)
+            var $amount = slider == 1?val:$("#amount").val();
+            var $duration = slider == 2?val:$("#duration").val();
+            $('#slider a').html('<label><span class="glyphicon glyphicon-chevron-left"></span> '+$amount+' <span class="glyphicon glyphicon-chevron-right"></span></label>');
+            }
+        </script>
     </body>
 </html>
